--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -4,9 +4,8 @@ description: File any type of issue.
 title: "[Issue] "
 labels:
   - triage
-  - help wanted
 assignees:
-  - muhlba91
+  - Marco-Ivantschitz
 body:
   - type: markdown
     attributes:
