--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,23 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'checkstyle'
 }
 
 group = 'io.muehlbachler.fhburgenland.swm'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+	sourceCompatibility = JavaVersion.VERSION_17
 }
+
+checkstyle {
+	toolVersion = '10.3.3'
+	configFile = file("C:/FH/3.Semester/Softwaremanagement II/Mühlbachler-Pietrzykowski/fh-burgenland-bswe-3b-2at/config/checkstyle/checkstyle.xml") // Pfad zur checkstyle-Konfigurationsdatei
+	showViolations = true // Zeige Verletzungen im Konsolenprotokoll
+}
+
+check.dependsOn 'checkstyle'
 
 configurations {
 	compileOnly {
