--- a/.github/workflows/Java CI with Gradle and Container Deployment.yml
+++ b/.github/workflows/Java CI with Gradle and Container Deployment.yml
@@ -81,6 +81,12 @@ jobs:
       # This is just an example timeout, adjust as needed
         timeout-minutes: 60
 
+      - name: artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: examination
+          path: build/libs/*.jar
+
   container:
    runs-on: ubuntu-latest
    needs: build
