--- a/.github/workflows/Java CI with Gradle and Container Deployment.yml
+++ b/.github/workflows/Java CI with Gradle and Container Deployment.yml
@@ -84,14 +84,29 @@ jobs:
   container:
    runs-on: ubuntu-latest
    needs: build
+   permissions:
+    packages: write
+    contents: read
    steps:
      - uses: actions/checkout@v4
-     - name: Build Docker image
-       run: docker buildx build -t ghcr.io/marco-ivantschitz/fh-burgenland-bswe-3b-2at/my-container:latest .
-     - name: Push Docker image to GHCR
-       run: |
-         echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-         docker push ghcr.io/marco-ivantschitz/fh-burgenland-bswe-3b-2at/my-container:latest
+     - name: Log in to the Container registry
+       uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+       with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+     - name: Extract metadata (tags, labels) for Docker
+       id: meta
+       uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+       with:
+          images: ghcr.io/${{ github.repository }}
+     - name: Build and push Docker image
+       uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+       with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 # Enforce branch protection rules
   enable-branch-protection:
